RESOLVED FIXED146480
[iOS] Ignore viewport rect changes during zoom bouncing.
https://bugs.webkit.org/show_bug.cgi?id=146480
Summary [iOS] Ignore viewport rect changes during zoom bouncing.
Andreas Kling
Reported 2015-06-30 16:46:57 PDT
We don't need to tell the web process about viewport rect changes during the zoom bounce animation.
Attachments
Patch (2.60 KB, patch)
2015-06-30 16:47 PDT, Andreas Kling
no flags
Andreas Kling
Comment 1 2015-06-30 16:47:46 PDT
WebKit Commit Bot
Comment 2 2015-06-30 17:40:18 PDT
Comment on attachment 255876 [details] Patch Clearing flags on attachment: 255876 Committed r186152: <http://trac.webkit.org/changeset/186152>
WebKit Commit Bot
Comment 3 2015-06-30 17:40:21 PDT
All reviewed patches have been landed. Closing bug.
Pratik Solanki
Comment 4 2015-07-05 21:57:32 PDT
*** Bug 146479 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.