[iOS] Ignore viewport rect changes during zoom bouncing. <https://webkit.org/b/146480>

Reviewed by Benjamin Poulain.

When the user has pinch-zoomed past the maximum zoom scale and lets go of the screen,
we animate a bounce back to the maximum scale.

Suppress viewport rect updates during this bounce animation since we don't need them
anyway. This fixes an issue where we'd sometimes get a weird rect during the animation
and if could send that to the web process, causing it to generate tiles for a part of
the page that's not actually exposed.

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _updateVisibleContentRects]):


Canonical link: https://commits.webkit.org/164575@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@186152 268f45cc-cd09-0410-ab3c-d52691b4dbfc